# rust_learning_projects

./: Cargo.toml
HashMap/: Cargo.toml
HashMap/src/: lib.rs
async_philosophers/: Cargo.toml
async_philosophers/src/: main.rs
chess_engine/: Cargo.toml
chess_engine/src/: consts.rs  main.rs
chess_engine/src/assets/: mod.rs
chess_engine/src/board/: bit_boards.rs  drawing.rs  mod.rs
chess_engine/src/game/: mod.rs
chess_engine/src/game/assets/: mod.rs
chess_engine/src/game/board/: bit_boards.rs  draw.rs  mod.rs
chess_engine/src/game/draw/: mod.rs
chess_engine/src/game_logic/: mod.rs
chess_engine/src/utils/: enums.rs  mod.rs  structs.rs
cub3D/: Cargo.toml
cub3D/Maps/: rave.cub
cub3D/src/: config.rs  consts.rs  draw.rs  game.rs  main.rs  player.rs
networth_tracker/: .env  .gitignore  .surreal_env  Cargo.toml  docker-compose.yaml
networth_tracker/backend/: Cargo.toml  Dockerfile
networth_tracker/backend/src/: coinmarket.rs  error.rs  main.rs  models.rs  person.rs  profile.rs  schema.rs
networth_tracker/src/: db.rs  main.rs
snake_game/src/: draw.rs  game.rs  main.rs  snake.rs
