[package]
name = "networth_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "4.0"
# actix-rt = "2.6.0"
# surrealdb = { version = "1.0.0-beta.8", features = ["kv-mem", "http"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# actix-session = "0.6.1"
# actix-identity = "0.5.0"
# bcrypt = "0.15.1"
# serde = { version = "1.0", features = ["derive"] }
# sqlx = { version = "0.6", features = ["postgres", "runtime-actix-rustls"] }
# dotenv = "0.15.0"
# uuid = "1.0.0"
actix-web = { version = "4.4.0", features = ["macros"] }
once_cell = "1.18.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "1.0.0-beta.8", features = ["kv-mem", "http"] }
thiserror = "1.0.50"
reqwest = "0.12.4"
dotenv = "0.15"